alignment corrected

--- a/pixar.css
+++ b/pixar.css
@@ -63,15 +63,15 @@ a:hover{
     width: 100%;
     height: 65vh;
     flex-flow: row wrap;
-    margin-left: 140px;
+    justify-content: center;
+    /* margin-left: 140px; */
     margin-top: 148px;
 }
 
 .down div{
     padding-right: 34px;
     letter-spacing: 2px;
-    color: rgb(39, 39, 39);
-    
+    color: rgb(39, 39, 39);  
 }
 .down p{
     padding-top: 38px;
